them chuc nang ban be

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/vendor/bootstrap-icons/bootstrap-icons.css">
 
 	<!-- Theme CSS -->
-	<link id="style-switch" rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link id="style-switch" rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
 	 
   </head>
   <body>
